packages/typ/tests/fixtures/diagnostics/0146_adt_record_field_bool_int_03.ml
type rec_gamma = { count : int; flag : bool }
let _ : rec_gamma = { count = 2; flag = 3 }
